NBNP-387 Add News Admin role|Basic page permissions

--- a/config-yml/user.role.newspaper_administrator.yml
+++ b/config-yml/user.role.newspaper_administrator.yml
@@ -37,24 +37,29 @@ permissions:
   - 'administer digital serial title entities'
   - 'administer serial issue entities'
   - 'bulk import publication holdings'
+  - 'create page content'
   - 'create publication content'
   - 'create terms in editor'
   - 'create terms in family'
   - 'create terms in publisher'
   - 'delete own page content'
   - 'delete serial holding entities'
+  - 'edit any page content'
   - 'edit any publication content'
   - 'edit digital serial title entities'
   - 'edit serial holding entities'
   - 'edit serial issue entities'
   - 'edit serial page entities'
   - 'edit terms in publisher'
+  - 'override page published option'
   - 'override publication published option'
+  - 'revert page revisions'
   - 'revert publication revisions'
   - 'use text format description_html'
   - 'use text format full_html'
   - 'view any unpublished publication content'
   - 'view own unpublished content'
+  - 'view page revisions'
   - 'view publication revisions'
   - 'view published serial holding entities'
   - 'view the administration theme'
