NBNP-387 Enable CKeditor|Full HTML for Basic poge|Body field

--- a/config-yml/field.field.node.page.body.yml
+++ b/config-yml/field.field.node.page.body.yml
@@ -6,7 +6,12 @@ dependencies:
     - field.storage.node.body
     - node.type.page
   module:
+    - allowed_formats
     - text
+third_party_settings:
+  allowed_formats:
+    allowed_formats:
+      - full_html
 _core:
   default_config_hash: rUop-8b6hvxxDYbv-KobTfNIBNbPY9qOPl8f6kBNSpw
 id: node.page.body
