NBNP-379 Update basic site settings name + default email address

--- a/config-yml/system.site.yml
+++ b/config-yml/system.site.yml
@@ -2,8 +2,8 @@ _core:
   default_config_hash: AyT9s8OUcclfALRE_imByOMgtZ19eOlqdF6zI3p7yqo
 langcode: en
 uuid: 655af73f-dc1a-48f1-84a1-3da88d2d1ad4
-name: 'NB Newspapers'
-mail: admin@example.com
+name: 'New Brunswick Historical Newspapers Project'
+mail: unb-libraries-no-reply@unb.ca
 slogan: ''
 page:
   403: ''
