NBNP-379 Remove role restriction re: Report webform config

--- a/config-yml/webform.webform.report_additional_info_errs.yml
+++ b/config-yml/webform.webform.report_additional_info_errs.yml
@@ -199,7 +199,8 @@ settings:
 access:
   create:
     roles:
-      - administrator
+      - anonymous
+      - authenticated
     users: {  }
     permissions: {  }
   view_any:
