--- a/config-yml/views.view.digital_page_lister.yml
+++ b/config-yml/views.view.digital_page_lister.yml
@@ -2762,7 +2762,7 @@ display:
           expose_sort_order: false
           sort_asc_label: Asc
           sort_desc_label: Desc
-          text_input_required: "<div class=\"alert alert-info\">\r\n  <span class=\"fas fa-question-circle\"></span> Enter 1 or more keyword terms to filter the result list.\r\n</div>"
+          text_input_required: "<div class=\"alert alert-info\">\r\n  Enter 1 or more keyword terms to filter the result list.\r\n</div>"
           text_input_required_format: full_html
       cache:
         type: none
@@ -2900,7 +2900,7 @@ display:
           admin_label: ''
           plugin_id: result
           empty: false
-          content: '<h2 class="alert alert-success"><i class="fas fa-check-circle fa-sm mr-1"></i>Displaying @start - @end of @total results</h2>'
+          content: '<h2 class="alert alert-success">Displaying @start - @end of @total results</h2>'
       exposed_block: true
       display_extenders: {  }
       path: page-search
