Post Search API upgrade config updates

--- a/config-yml/search_api.index.solr_newspapers_lib_unb_ca.yml
+++ b/config-yml/search_api.index.solr_newspapers_lib_unb_ca.yml
@@ -68,6 +68,7 @@ third_party_settings:
     multilingual:
       limit_to_content_language: false
       include_language_independent: true
+      specific_languages: {  }
 id: solr_newspapers_lib_unb_ca
 name: newspapers.lib.unb.ca
 description: ''
