--- a/config-yml/search_api.index.pages_newspapers_lib_unb_ca.yml
+++ b/config-yml/search_api.index.pages_newspapers_lib_unb_ca.yml
@@ -14,6 +14,8 @@ third_party_settings:
     finalize: false
     commit_before_finalize: false
     commit_after_finalize: false
+    multilingual:
+      specific_languages: {  }
 id: pages_newspapers_lib_unb_ca
 name: pages.newspapers.lib.unb.ca
 description: ''
