--- a/config-yml/views.view.digital_title_listing.yml
+++ b/config-yml/views.view.digital_title_listing.yml
@@ -3,10 +3,13 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.storage.node.field_first_issue_sort_date
+    - field.storage.node.field_last_issue_sort_date
     - field.storage.node.field_place_of_publication
     - field.storage.node.field_sort_title
   module:
     - address
+    - datetime
     - digital_serial_title
     - node
     - user
@@ -266,6 +269,134 @@ display:
           empty_zero: false
           hide_alter_empty: true
           display_name: false
+        field_first_issue_sort_date:
+          id: field_first_issue_sort_date
+          table: node__field_first_issue_sort_date
+          field: field_first_issue_sort_date
+          relationship: parent_title
+          group_type: group
+          admin_label: ''
+          plugin_id: field
+          label: 'First Digitized Issue'
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: true
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: '<small class="text-muted"><i class="fas fa-question-circle"></i> Unknown</small>'
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: datetime_default
+          settings:
+            timezone_override: ''
+            format_type: html_date
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+        field_last_issue_sort_date:
+          id: field_last_issue_sort_date
+          table: node__field_last_issue_sort_date
+          field: field_last_issue_sort_date
+          relationship: parent_title
+          group_type: group
+          admin_label: ''
+          plugin_id: field
+          label: 'Last Digitized Issue'
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: true
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: '<small class="text-muted"><i class="fas fa-question-circle"></i> Unknown</small>'
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: datetime_default
+          settings:
+            timezone_override: ''
+            format_type: html_date
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
       pager:
         type: full
         options:
@@ -475,6 +606,8 @@ display:
         - url.query_args
         - user.permissions
       tags:
+        - 'config:field.storage.node.field_first_issue_sort_date'
+        - 'config:field.storage.node.field_last_issue_sort_date'
         - 'config:field.storage.node.field_place_of_publication'
         - 'config:field.storage.node.field_sort_title'
   page_listing:
@@ -495,5 +628,7 @@ display:
         - url.query_args
         - user.permissions
       tags:
+        - 'config:field.storage.node.field_first_issue_sort_date'
+        - 'config:field.storage.node.field_last_issue_sort_date'
         - 'config:field.storage.node.field_place_of_publication'
         - 'config:field.storage.node.field_sort_title'
