NBNP-391 Reduce responsive priority re: 1st/last issue verbose headings

--- a/config-yml/views.view.digital_title_listing.yml
+++ b/config-yml/views.view.digital_title_listing.yml
@@ -546,14 +546,14 @@ display:
               align: ''
               separator: ''
               empty_column: false
-              responsive: ''
+              responsive: priority-medium
             field_last_issue_sort_date:
               sortable: true
               default_sort_order: desc
               align: ''
               separator: ''
               empty_column: false
-              responsive: ''
+              responsive: priority-medium
           override: true
           sticky: false
           summary: ''
