NBNP-390 Reset button label consistent w/ Search

--- a/config-yml/views.view.digital_title_listing.yml
+++ b/config-yml/views.view.digital_title_listing.yml
@@ -423,7 +423,7 @@ display:
         options:
           submit_button: 'Apply Filter'
           reset_button: true
-          reset_button_label: Reset
+          reset_button_label: 'Show All Titles'
           exposed_sorts_label: 'Sort by'
           expose_sort_order: true
           sort_asc_label: Asc
