--- a/config-yml/webform.webform.report_additional_info_errs.yml
+++ b/config-yml/webform.webform.report_additional_info_errs.yml
@@ -71,7 +71,7 @@ settings:
   ajax_effect: ''
   ajax_speed: null
   page: true
-  page_submit_path: /report-info-errors
+  page_submit_path: /report-info-errs
   page_confirm_path: ''
   page_theme_name: newspapers_lib_unb_ca
   form_title: source_entity_webform
