NBNP-391 WIP: hide 1st/last date table fields

--- a/config-yml/views.view.digital_title_listing.yml
+++ b/config-yml/views.view.digital_title_listing.yml
@@ -278,7 +278,7 @@ display:
           admin_label: ''
           plugin_id: field
           label: 'First Digitized Issue'
-          exclude: false
+          exclude: true
           alter:
             alter_text: false
             text: ''
@@ -342,7 +342,7 @@ display:
           admin_label: ''
           plugin_id: field
           label: 'Last Digitized Issue'
-          exclude: false
+          exclude: true
           alter:
             alter_text: false
             text: ''
