--- a/config-yml/views.view.digital_title_listing.yml
+++ b/config-yml/views.view.digital_title_listing.yml
@@ -1,6 +1,6 @@
 uuid: 7334a26a-ef16-485c-80bd-f0c7724d49d8
 langcode: en
-status: true
+status: false
 dependencies:
   config:
     - field.storage.node.field_first_issue_sort_date
