--- a/config-yml/views.view.digital_titles_lister.yml
+++ b/config-yml/views.view.digital_titles_lister.yml
@@ -737,7 +737,7 @@ display:
           admin_label: ''
           plugin_id: text_custom
           empty: true
-          content: "<div class=\"alert border\">\r\n<strong>Note:</strong> Only a limited number of newspapers have been digitized to date and new content is being added on a continuing basis, including extending the runs existing titles.\r\n<a href=\"/project\" class=\"btn btn-link p-0 text-left\">More information about the New Brunswick Historical Newspapers Project <span class=\"fas fa-angle-double-right fa-sm\"></span></a>\r\n</div>"
+          content: "<div class=\"alert border\">\r\n<strong>Note:</strong> This is the current listing of newspapers that have been digitized. New content is being continually added, including extending the runs of existing titles.\r\n<a href=\"/project\" class=\"btn btn-link p-0 text-left\"><span class=\"fas fa-question-circle fa-sm\" aria=hidden=\"true\"></span> More information about the New Brunswick Historical Newspapers Project</a>\r\n</div>"
           tokenize: false
         result:
           id: result
@@ -748,7 +748,7 @@ display:
           admin_label: ''
           plugin_id: result
           empty: false
-          content: '<h2 class="alert alert-success"><i class="fas fa-check-circle fa-sm mr-1"></i>Displaying @start - @end of @total results</h2>'
+          content: '<h2 class="alert alert-success">Displaying @start - @end of @total results</h2>'
       footer: {  }
       display_extenders: {  }
     cache_metadata:
