--- a/.dockworker/deployment/k8s/prod/testing.yaml
+++ b/.dockworker/deployment/k8s/prod/testing.yaml
@@ -7,7 +7,7 @@ metadata:
     app: cypress
     tier: cron
 spec:
-  schedule: "*/5 * * * *"
+  schedule: '*/5 * * * *'
   startingDeadlineSeconds: 480
   concurrencyPolicy: Forbid
   jobTemplate:
@@ -21,42 +21,39 @@ spec:
       template:
         spec:
           nodeSelector:
-            deployenv: dev
+            environment: testing
           containers:
-            -
-              name: cron-testing-newspapers-lib-unb-ca
+            - name: cron-testing-newspapers-lib-unb-ca
               env:
-                -
-                  name: DEPLOY_ENV
-                  value: testing
-                -
-                  name: CYPRESS_REPORTER_VERBOSITY
-                  value: '20'
-                -
-                  name: CYPRESS_SPEC_FILE
+                - name: CYPRESS_REPORTER_VERBOSITY
+                  value: "20"
+                - name: CYPRESS_SPEC_FILE
                   valueFrom:
                     secretKeyRef:
                       name: newspapers-lib-unb-ca-cypress
                       key: file
-                -
-                  name: CYPRESS_SPEC_FILE_NAME
+                - name: CYPRESS_SPEC_FILE_NAME
                   valueFrom:
                     secretKeyRef:
                       name: newspapers-lib-unb-ca-cypress
                       key: file_name
-              image: "ghcr.io/unb-libraries/cypress.status.lib.unb.ca:prod"
+                - name: DEPLOY_ENV
+                  value: testing
+                - name: MONGODB_CONNECT_URI
+                  valueFrom:
+                    secretKeyRef:
+                      name: mongodb
+                      key: connect-uri
+              image: ghcr.io/unb-libraries/cypress.status.lib.unb.ca:prod
               imagePullPolicy: Always
               volumeMounts:
-                -
-                  mountPath: /usr/src/reports
+                - mountPath: /usr/src/reports
                   name: cypress-persistent-storage
           priorityClassName: cron-priority-services
           imagePullSecrets:
-            -
-              name: github-container-registry-auth
+            - name: github-container-registry-auth
           restartPolicy: Never
           volumes:
-            -
-              name: cypress-persistent-storage
+            - name: cypress-persistent-storage
               persistentVolumeClaim:
                 claimName: status-lib-unb-ca
