NBNP-379 Report info webform: read-only prepopualted Newspaper field

--- a/config-yml/webform.webform.report_additional_info_errs.yml
+++ b/config-yml/webform.webform.report_additional_info_errs.yml
@@ -40,6 +40,7 @@ elements: |-
       newspaper:
         '#type': textfield
         '#title': Newspaper
+        '#disabled': true
       message:
         '#type': textarea
         '#title': Message
