--- a/config-yml/core.extension.yml
+++ b/config-yml/core.extension.yml
@@ -4,6 +4,7 @@ module:
   address: 0
   alert_scheduler_client: 0
   allowed_formats: 0
+  antibot: 0
   automated_cron: 0
   basic_auth: 0
   block: 0
