--- a/config-yml/webform.webform.report_additional_info_errs.yml
+++ b/config-yml/webform.webform.report_additional_info_errs.yml
@@ -1,7 +1,12 @@
 uuid: 8750ef4b-1e7c-446c-8e19-0cf8a0cb7f25
 langcode: en
 status: open
-dependencies: {  }
+dependencies:
+  module:
+    - antibot
+third_party_settings:
+  antibot:
+    antibot: true
 weight: 0
 open: null
 close: null
